<resources>
	<string name="app_name">Lecture notes</string>
	<string name="take_photo">Take photo</string>

	<!--Toolbar-->
	<string name="toolbar_settings">Settings</string>
	<string name="toolbar_help">Help</string>
	<string name="title_activity_table">Table</string>
	<string name="btn_discard">Discard</string>
	<string name="btn_nextPicture">Next</string>
	<string name="btn_sessionComplete">Finish</string>
	<string name="tagsCompletionView_hint">Tags</string>
	<string name="complete_session_continue_button_label">Continue</string>
	<string name="complete_session_cancel_button_label">Cancel</string>
	<string name="seriesCompletionView_hint">Series</string>
	<string name="btn_finishReordering">Finish</string>
	<string name="btn_cancelReordering">Cancel</string>
	<string name="btn_backReordering">Back</string>
	<string name="share">Share</string>
	<string name="share_title">Share PDF via...</string>
	<string name="camera_permission_required_toast_text">Without permission for using camera is this application useless for you.</string>
	<string name="delete">Delete</string>
	<string name="action_search">Search</string>
	<string name="delete_confirmation_ok_button_label">Ok</string>
	<string name="delete_confirmation_cancel_button_label">Cancel</string>
	<string name="delete_confirmation_dialog_text_beginning">"Do you really want to delete "</string>
	<string name="delete_confirmation_dialog_text_end">" photos?"</string>
	<string name="share_progress_dialog">"Exporting, please wait."</string>
</resources>
