<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:paddingLeft="@dimen/activity_horizontal_margin"
			  android:paddingRight="@dimen/activity_horizontal_margin"
			  android:paddingTop="@dimen/activity_vertical_margin"
			  android:paddingBottom="@dimen/activity_vertical_margin">

	<cz.cvut.fjfi.pvs.pvs2016.TokenCompletionView
			android:id="@+id/seriesCompletionView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/seriesCompletionView_hint"/>

	<cz.cvut.fjfi.pvs.pvs2016.TokenCompletionView
			android:id="@+id/tagsCompletionView"
			android:hint="@string/tagsCompletionView_hint"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

		<Button
				android:id="@+id/btn_settingTagsCancel"
				android:text="@string/complete_session_cancel_button_label"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"/>

		<Button
				android:id="@+id/btn_settingTagsComplete"
				android:text="@string/complete_session_continue_button_label"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"/>

	</LinearLayout>

</LinearLayout>