<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical">

	<LinearLayout android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  android:orientation="horizontal">

		<Button android:id="@+id/btn_cancelReordering"
				style="?android:attr/borderlessButtonStyle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/btn_cancelReordering"
				android:layout_weight="1"/>

		<Button android:id="@+id/btn_backReordering"
				style="?android:attr/borderlessButtonStyle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/btn_backReordering"
				android:layout_weight="1"/>

		<Button android:id="@+id/btn_finishReordering"
				style="?android:attr/borderlessButtonStyle"
				android:drawableRight="@drawable/ic_exit_to_app_black_24dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/btn_finishReordering"
				android:layout_weight="1"/>

	</LinearLayout>

	<android.support.v7.widget.RecyclerView
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:id="@+id/recycler_view"
			android:layout_width="match_parent"
			android:layout_height="match_parent"/>

</LinearLayout>