<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_height="match_parent"
			  android:layout_width="match_parent"
			  android:orientation="vertical"
			  android:weightSum="1">

	<com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:id="@+id/imageView"
			android:layout_gravity="center_horizontal"
			android:layout_weight="0.9"
			android:focusableInTouchMode="false"/>

	<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_weight="0.1">

		<Button
				style="?android:attr/borderlessButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:text="@string/btn_discard"
				android:id="@+id/btn_discard"
				android:drawableLeft="@drawable/ic_delete_black_24dp"
				android:layout_weight="3"/>

		<Button
				style="?android:attr/borderlessButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:text="@string/btn_nextPicture"
				android:id="@+id/btn_nextPicture"
				android:drawableLeft="@drawable/ic_playlist_add_black_24dp"
				android:layout_weight="3"/>

		<Button
				style="?android:attr/borderlessButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:text="@string/btn_sessionComplete"
				android:id="@+id/btn_continueToTags"
				android:drawableLeft="@drawable/ic_playlist_add_check_black_24dp"
				android:layout_weight="3"/>
	</LinearLayout>

</LinearLayout>